[metadata]
name = colcon-snap
version = attr: colcon_snap.__version__
author = Michael Carroll
author_email = michael@openrobotics.org
maintainer = Michael Carroll
maintainer_email = michael@openrobotics.org.com
project_urls =
    Changelog = https://github.com/mjcarroll/colcon-snap/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/mjcarroll/colcon-snap/
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: MacOS
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = A colcon extension to create snaps from workspaces
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.5
install_requires =
  colcon-core>=0.3.15
  colcon-python-setup-py>=0.2.1
packages = find:
tests_require =
  flake8
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  mock
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2
zip_safe = true

[options.entry_points]
colcon_core.verb =
  snap = colcon_snap.verb.snap:SnapVerb

[options.packages.find]
exclude =
  test
  test.*

[aliases]
test = pytest

[flake8]
import-order-style = google
